# dotfiles

./: .Brewfile  .chezmoiignore  .dockerignore  .gitignore  .tmux.conf  .vimrc  .zshrc  AGENTS.md  README.md  bootstrap.sh  dot_tmux.conf  dot_zshrc  flake.nix  install-brews.sh
.chezmoiscripts/: run_after_11-install-rust-skill-bins.sh  run_once_after_01-install-tpm-plugins.sh  run_once_before_03-install-oh-my-zsh.sh  run_once_before_04-install-zsh-plugins.sh  run_once_before_05-install-tpm.sh  run_once_before_06-install-nvm.sh  run_once_before_07-install-pnpm.sh  run_once_before_08-install-bun.sh  run_once_before_09-install-tsgo.sh  run_once_before_10-install-rust.sh
.config/: starship.toml
alfred-themes/: alfred-theme-big-sur-dark.alfredappearance
docs/: codex-spaces.md
dot_claude/: README.md  executable_statusline-command.sh  executable_tmux-notify.sh  settings.json
dot_claude/skills/gh-address-comments/scripts/: Cargo.toml
dot_codex/: AGENTS.md
home/: .tmux.conf  .vimrc  .zshrc
home/.codex/skills/gh-manage-pr/scripts/: Cargo.toml  summarize_diff.rs
home/.codex/skills/gh-manage-pr/scripts/src/: cli.rs  github.rs  journal.rs  lib.rs
lib/: mkDarwin.nix  mkHome.nix  profiles.nix
pkgs/: observe.nix  spaces.nix
scripts/: detect-berkeley-mono-font.sh  migrate-sql-read-state.sh  overwrite-nvim-config.sh  overwrite-tmux-config.sh  test-codex-skill-display-names.sh  test-github-skill-contracts.sh  test-shared-skills-sync.sh  test-skill-helpers.sh
tasks/: lessons.md  todo.md
tests/: ghostty-font-detection-smoke.sh  nvim-external-write-merge-smoke.sh  (+13 more)
(+265 files in other folders)
