[package]
name = "gh-address-comments-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1"

[[bin]]
name = "fetch-comments"
path = "src/bin/fetch_comments.rs"

[[bin]]
name = "create-comment"
path = "src/bin/create_comment.rs"

[[bin]]
name = "create-thread-reply"
path = "src/bin/create_thread_reply.rs"

[[bin]]
name = "resolve-thread"
path = "src/bin/resolve_thread.rs"

[[bin]]
name = "summarize-threads"
path = "src/bin/summarize_threads.rs"
